<resources>
    <string name="app_name">IOE Updates</string>

    <!--edit text hints-->
    <string name="enter_name">Enter your name</string>
    <string name="enter_email">Enter your email</string>
    <string name="password_criteria">at least 8 characters long</string>
    <string name="retype_password">Re-type your password</string>
    <string name="enter_new_pass">Enter your new password</string>

    <!--page title-->
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="change_password">Change password</string>
    <string name="student_sign_up">Student Sign Up</string>
    <string name="provide_feedback">Provide Feedback</string>

    <!--login required string-->
    <string name="email">Email*</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="dont_have_account">Dont have an account? Sign up</string>

    <!--student sign up required string-->
    <string name="batch">Batch</string>
    <string name="roll">Roll No</string>
    <string name="bct520">e.g. 520</string>
    <string name="bct">e.g. BCT</string>
    <string name="program">Program</string>
    <string name="batch_eg">073(in B.S.)</string>

    <!--sign up string required-->
    <string name="already_have_account">Already have an acoount? Log in</string>

    <!--profile string required-->
    <string name="subject">Subject</string>
    <string name="f_hall">F-hall</string>
    <string name="time_eg">03:50pm-05:00pm</string>
    <string name="time">Time</string>
    <string name="semester">Semester</string>
    <string name="fifth">5th</string>

    <!--forgot/change password string required-->
    <string name="reset_password">Reset Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New Password</string>

    <!--buttons-->
    <string name="submit">Submit</string>
    <string name="save">Save</string>

    <!-- teacher arrival info + schedule-->
    <string name="class_details">BCT-5th Lib-3</string>
    <string name="date">2019/06/28</string>
    <string name="attend">Attend</string>
    <string name="not_attend">Not attend</string>
    <string name="message">Message</string>
    <string name="test_msg">This is a sample test message. Hey!</string>
    <string name="expected_time">Expected time:</string>
    <string name="class_details_for_student">Teacher, F-hall</string>
    <string name="updates">Updates</string>

    <!-- navigation activity-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_after_login">AfterLoginActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="schedule">Schedule</string>
    <string name="logout">Log out</string>

    <!--feedback-->
    <string name="feedback_form">Feedback Form</string>
    <string name="question1">Was the teacher regular?</string>
    <string name="question2">Was the teacher interactive?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question3">Say something to the teacher</string>
    <string name="attendance">Attendance</string>
    <string name="semester_not_ended">The semester hasn\'t ended yet. You can only give feedback at the end of semester</string>
    <string name="group">Group</string>
    <string name="example_group">e.g. A</string>
    <string name="feedback">Feedback</string>
    <string name="full_time_teacher">Full time teacher</string>
    <string name="teacher_department">Department of Electronics and Computer Engineering</string>
    <string name="today_schedule">Today\'s Schedule</string>
    <string name="sunday">Sunday</string>
    <string name="to">To: </string>
    <string name="test_msg2">This is just a test message. Hello everybody. How you people doing? I hope everyone is doing great!!</string>
    <string name="my_feedback">My Feedbacks</string>
    <string name="send_notice">Send Notice</string>
    <string name="select_year">Select year</string>
    <string name="select_part">Select part</string>
    <string name="notice">Notice</string>
    <string name="your_notice">Notice details..</string>
    <string name="send_sms">Send sms</string>
    <string name="send_email">Send email?</string>
    <string name="last_updated">Last Updated</string>
    <string name="update">Update</string>
    <string name="cant_attend">Default: Can\'t attend class.</string>
    <string name="time_one">03:15</string>
    <string name="set_start_time">Set start time</string>
    <string name="set_end_time">Set end time</string>
    <string name="no_internet_connection">No internet connection :(</string>
    <string name="attending">Attending</string>

    <string-array name="program_array">
        <item>Computer</item>
        <item>Electrical</item>
        <item>Electronics</item>
        <item>Civil</item>
        <item>Mechanical</item>
    </string-array>

    <string-array name="teacher_list_for_feedback">
        <item>Dr. Arun Timalsina</item>
        <item>Dr.Basanta Joshi</item>
        <item>Dr. Aman Shakya</item>
    </string-array>

    <string-array name="year_array">
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
    </string-array>

    <string-array name="part_array">
        <item>I</item>
        <item>II</item>
    </string-array>

    <string name="set_attend_time">Set time</string>
    <string name="refresh">Refresh</string>
    <string name="schedule_updated">Schedule Updated</string>
    <string name="lab4">Lab 4</string>
    <string name="updated_time">Updated time:</string>
    <string name="dash">--</string>
    <string name="theory">(Theory)</string>
    <string name="marks_obtained">Marks Obtained:</string>
    <string name="marks_example">56</string>
    <string name="total_marks">Total Marks:</string>
    <string name="pass_marks">Pass Marks:</string>
    <string name="year">Year:</string>
    <string name="year_example">IV</string>
    <string name="part">Part:</string>
    <string name="part_example">II</string>
    <string name="my_marks">My Marks</string>
    <string name="empty_string" />
</resources>
