<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/schedule_icon"
            android:title="@string/schedule" />

        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/attendance_icon"
            android:title="@string/attendance" />

        <item
            android:id="@+id/nav_provide_feedback"
            android:icon="@drawable/feedback_icon"
            android:title="@string/provide_feedback" />

    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_change_password"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/change_password" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/logout_icon"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
