<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/background_image_include"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/BaseLayoutStyle">

        <TextView
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_sign_up" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/batch" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_batch_student_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/lightColorAccent"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/batch_eg"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/program" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_program_student_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/lightColorAccent"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/bct"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roll" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_roll_student_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/lightColorAccent"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/bct520"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_student_sign_up"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/submit" />

    </LinearLayout>
</RelativeLayout>
