<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/background_image_include"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/BaseLayoutStyle">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_student_profile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_header_height"
            android:src="@drawable/portrait"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/tv_student_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TitleTextStyle"
            android:text="@string/student"
            android:gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/NormalTitleStyle"
            android:text="@string/name"
            android:layout_marginTop="@dimen/padding_5"
            />

        <TextView
            android:id="@+id/tv_student_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/student"
            android:paddingLeft="@dimen/padding_10"
            android:paddingVertical="@dimen/padding_5"
            android:layout_marginBottom="@dimen/padding_5"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/NormalTitleStyle"
            android:text="@string/roll"
            android:layout_marginTop="@dimen/padding_5"

            />

        <TextView
            android:id="@+id/tv_roll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/bct520"
            android:paddingLeft="@dimen/padding_10"
            android:paddingVertical="@dimen/padding_5"
            android:layout_marginBottom="@dimen/padding_5"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/NormalTitleStyle"
            android:text="@string/group"
            android:layout_marginTop="@dimen/padding_5"
            />

        <TextView
            android:id="@+id/tv_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/example_group"
            android:paddingLeft="@dimen/padding_10"
            android:paddingVertical="@dimen/padding_5"
            android:layout_marginBottom="@dimen/padding_5"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/NormalTitleStyle"
            android:text="@string/semester"
            android:layout_marginTop="@dimen/padding_5"
            />

        <TextView
            android:id="@+id/tv_semester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/fifth"
            android:paddingLeft="@dimen/padding_10"
            android:paddingVertical="@dimen/padding_5"
            android:layout_marginBottom="@dimen/padding_5"
            />

    </LinearLayout>

</RelativeLayout>
