<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_grey"
    >

    <include layout="@layout/background_image_include"/>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/base_padding"
        android:paddingTop="@dimen/base_padding"
        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                style="@style/TitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign Up" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/lightColorAccent"
                app:errorEnabled="true"
                app:hintEnabled="true">

                <android.support.design.widget.TextInputEditText
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_name_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/lightColorAccent"
                app:errorEnabled="true"
                app:hintEnabled="true">

                <android.support.design.widget.TextInputEditText
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/enter_name" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/lightColorAccent"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/password_criteria"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_confirm_pass_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/lightColorAccent"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/retype_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/scroll"
        android:paddingTop="@dimen/padding_10"
        android:paddingHorizontal="@dimen/base_padding"
        >

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RadioButton
                android:id="@+id/rb_teacher_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/teacher" />

            <RadioButton
                android:id="@+id/rb_student_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/tv_already_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/already_have_account"
            android:textColor="@color/colorAccent" />

    </LinearLayout>
</RelativeLayout>
