<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <include layout="@layout/background_image_include"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/BaseLayoutStyle"
        >

        <TextView
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_password" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/lightColorAccent"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/lightColorAccent"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/password_criteria"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_confirm_pass_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/lightColorAccent"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/enter_new_pass"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_change_password"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/save" />
    </LinearLayout>

</RelativeLayout>
